--- a/code-gen/config.json
+++ b/code-gen/config.json
@@ -1,6 +1,6 @@
 {
     "MODE": "OpenAI",
-    "OPENAI_API_KEY": "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",
+    "OPENAI_API_KEY": "",
     "MODEL": "gpt-4-turbo-preview",
     "VISION_MODEL": "gpt-4-vision-preview"
 }
