--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "checkbuild": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@swc/cli": "^0.3.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
